test/files/neg/eta-expand-star.check
eta-expand-star.scala:6: error: too many arguments (2) for method apply: (v1: Seq[T])Unit in trait Function1
    g(1, 2)
         ^
one error found
